force-app/main/default/objects/Account_Summary__c/Account_Summary__c.object-meta.xml
<CustomObject>
    <label>Account Summary</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>