force-app/main/default/objects/Account_Summary__c/fields/Total_Debited__c.field-meta.xml
<CustomField>
    <fullName>Total_Debited__c</fullName>
    <label>Total Debited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>